# Studying

./: .gitignore  README.md  cmatpoltlib.py  design_patterns.py  git-commit.bat  git_push.bat  git提交.bat  test.py  time_ex.py  wechart_robot.py  概率.md
CPP/: CMakeLists.txt  common.cpp  main.cpp
CPP/DesignPatterns/: abstract_factory.hpp  adapter.hpp  builder.hpp  common_header.h  decorator.hpp  facade.hpp  factory.hpp  food.hpp  fruit.hpp  header.h  prototype.hpp  proxy.hpp  simple_factory.hpp  singleton.hpp
Python/: asio.py  cleanup.py  config.ini  connection.py  file_convert.py  filesystem.py  main.py  sample.txt  ssh_client.py  test.py  time_ex.py  xtime.py
Python/FHTools/: H5ConfigUpdate.py  H5GameServerUpdate.py  H5游戏服务器更新.py  U3D游戏读取配置.py
Python/archive/: archive_base.py  mysql_engine.py
Python/celestial/: config.ini  run.py
Python/crawler/: http_request.py
Python/design_patterns/: builder_pattern.py  prototype_pattern.py
Python/httpserver/: __init__.py  config.ini
Python/kami/: config.ini  httpserver.py  main.py  test.py
Python/kami/common/: xconfig.py  (+6 more)
Python/mathematics/: base.py
Python/mysql/: mysql_pool.py
Python/poker/: dealer.py  playing_cards.py
Python/pytools/: common.py  config.py  filesystem.py  singleton.py  timer.py
Python/sanic/: authorization.py  authorized.py  common.py  exception.py  main.py  sanic_common.py
Python12/algorithm/: sort.py
Web/: 人鬼发牌.html
design_patterns/: abstract_factory_pattern.py  builder_pattern.py  factory_pattern.py  simple_factory_pattern.py
flasky/: manage.py
flasky/app/: main.py  module1.py
(+31 files in other folders)
